--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -7,16 +7,11 @@
     <meta charset="UTF-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Sash – Bootstrap 5  Admin & Dashboard Template">
-    <meta name="author" content="Spruko Technologies Private Limited">
-    <meta name="keywords"
-          content="admin,admin dashboard,admin panel,admin template,bootstrap,clean,dashboard,flat,jquery,modern,responsive,premium admin templates,responsive admin,ui,ui kit.">
-
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/x-icon" href="/static/assets/images/brand/favicon.ico" />
 
     <!-- TITLE -->
-    <title>Sash – Bootstrap 5 Admin & Dashboard Template</title>
+    <title>ikasa - Обменное бюро</title>
 
     <!-- BOOTSTRAP CSS -->
     <link id="style" href="/static/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -55,11 +50,11 @@
                                     <h3 class="text-start fw-bold p-0 m-0">Обменное бюро</h3>
                                     <img src="/static/20221212_234123.png" class="p-0 m-0" width="90" alt="">
                                 </div>
-                                <a href="https://themeforest.net/item/sash-bootstrap-5-admin-dashboard-template/35183671"
+                                <a href="#"
                                    target="_blank" class="btn ripple btn-min w-lg mb-3 me-2 btn-primary"><i
                                         class="icon icon-phone me-2"></i> (772) 121111
                                 </a>
-                                <a href="https://themeforest.net/user/spruko/portfolio"
+                                <a href="#"
                                    class="btn ripple btn-min w-lg btn-outline-primary mb-3 me-2" target="_blank"><i
                                         class="fe fe-smartphone me-2"></i>(555) 1555223
                                 </a>
