--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -84,41 +84,49 @@
                                         {% if inline.county == 2 %}
                                             <tr>
                                                 <td><i class="flag flag-eu"></i></td>
-                                                <td>KZT</td>
-                                                <td>85.00</td>
-                                                <td>86.00</td>
+                                                <td>EUR</td>
+                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
                                         {% if inline.county == 3 %}
                                             <tr>
                                                 <td><i class="flag flag-ru"></i></td>
                                                 <td>RUB</td>
-                                                <td>85.00</td>
-                                                <td>86.00</td>
+                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
                                         {% if inline.county == 4 %}
                                             <tr>
                                                 <td><i class="flag flag-kz"></i></td>
                                                 <td>KZT</td>
-                                                <td>85.00</td>
-                                                <td>86.00</td>
+                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
                                         {% if inline.county == 5 %}
                                             <tr>
                                                 <td><i class="flag flag-cn"></i></td>
                                                 <td>CNY</td>
-                                                <td>85.00</td>
-                                                <td>86.00</td>
+                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
                                         {% if inline.county == 6 %}
                                             <tr>
                                                 <td><i class="flag flag-gb"></i></td>
                                                 <td>GBP</td>
-                                                <td>85.00</td>
-                                                <td>86.00</td>
+                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.shop }}</td>
+                                            </tr>
+                                        {% endif %}
+                                        {% if inline.county == 7 %}
+                                            <tr>
+                                                <td><i class="flag flag-uz"></i></td>
+                                                <td>UZS</td>
+                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
                                     {% endfor %}
