--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -77,7 +77,7 @@
                                             <tr>
                                                 <td><i class="flag flag-us"></i></td>
                                                 <td>USD</td>
-                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.buy }}</td>
                                                 <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
@@ -85,7 +85,7 @@
                                             <tr>
                                                 <td><i class="flag flag-eu"></i></td>
                                                 <td>EUR</td>
-                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.buy }}</td>
                                                 <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
@@ -93,7 +93,7 @@
                                             <tr>
                                                 <td><i class="flag flag-ru"></i></td>
                                                 <td>RUB</td>
-                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.buy }}</td>
                                                 <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
@@ -101,7 +101,7 @@
                                             <tr>
                                                 <td><i class="flag flag-kz"></i></td>
                                                 <td>KZT</td>
-                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.buy }}</td>
                                                 <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
@@ -109,7 +109,7 @@
                                             <tr>
                                                 <td><i class="flag flag-cn"></i></td>
                                                 <td>CNY</td>
-                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.buy }}</td>
                                                 <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
@@ -117,7 +117,7 @@
                                             <tr>
                                                 <td><i class="flag flag-gb"></i></td>
                                                 <td>GBP</td>
-                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.buy }}</td>
                                                 <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
@@ -125,7 +125,7 @@
                                             <tr>
                                                 <td><i class="flag flag-uz"></i></td>
                                                 <td>UZS</td>
-                                                <td>{{ inline.shop }}</td>
+                                                <td>{{ inline.buy }}</td>
                                                 <td>{{ inline.shop }}</td>
                                             </tr>
                                         {% endif %}
@@ -169,7 +169,7 @@
                                                                 <tr>
                                                                     <td><i class="flag flag-us"></i></td>
                                                                     <td>USD</td>
-                                                                    <td>{{ inline.shop }}</td>
+                                                                    <td>{{ inline.buy }}</td>
                                                                     <td>{{ inline.shop }}</td>
                                                                 </tr>
                                                             {% endif %}
@@ -177,7 +177,7 @@
                                                                 <tr>
                                                                     <td><i class="flag flag-eu"></i></td>
                                                                     <td>EUR</td>
-                                                                    <td>{{ inline.shop }}</td>
+                                                                    <td>{{ inline.buy }}</td>
                                                                     <td>{{ inline.shop }}</td>
                                                                 </tr>
                                                             {% endif %}
@@ -185,7 +185,7 @@
                                                                 <tr>
                                                                     <td><i class="flag flag-ru"></i></td>
                                                                     <td>RUB</td>
-                                                                    <td>{{ inline.shop }}</td>
+                                                                    <td>{{ inline.buy }}</td>
                                                                     <td>{{ inline.shop }}</td>
                                                                 </tr>
                                                             {% endif %}
@@ -193,7 +193,7 @@
                                                                 <tr>
                                                                     <td><i class="flag flag-kz"></i></td>
                                                                     <td>KZT</td>
-                                                                    <td>{{ inline.shop }}</td>
+                                                                    <td>{{ inline.buy }}</td>
                                                                     <td>{{ inline.shop }}</td>
                                                                 </tr>
                                                             {% endif %}
@@ -201,7 +201,7 @@
                                                                 <tr>
                                                                     <td><i class="flag flag-cn"></i></td>
                                                                     <td>CNY</td>
-                                                                    <td>{{ inline.shop }}</td>
+                                                                    <td>{{ inline.buy }}</td>
                                                                     <td>{{ inline.shop }}</td>
                                                                 </tr>
                                                             {% endif %}
@@ -209,7 +209,7 @@
                                                                 <tr>
                                                                     <td><i class="flag flag-gb"></i></td>
                                                                     <td>GBP</td>
-                                                                    <td>{{ inline.shop }}</td>
+                                                                    <td>{{ inline.buy }}</td>
                                                                     <td>{{ inline.shop }}</td>
                                                                 </tr>
                                                             {% endif %}
@@ -217,7 +217,7 @@
                                                                 <tr>
                                                                     <td><i class="flag flag-uz"></i></td>
                                                                     <td>UZS</td>
-                                                                    <td>{{ inline.shop }}</td>
+                                                                    <td>{{ inline.buy }}</td>
                                                                     <td>{{ inline.shop }}</td>
                                                                 </tr>
                                                             {% endif %}
