--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -71,8 +71,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                {% for row in table %}
-                                    {% for inline in row.landingcursevalue_set.all %}
+                                    {% for inline in tablef.landingcursevalue_set.all %}
                                         {% if inline.county == 1 %}
                                             <tr>
                                                 <td><i class="flag flag-us"></i></td>
@@ -130,7 +129,6 @@
                                             </tr>
                                         {% endif %}
                                     {% endfor %}
-                                {% endfor %}
                                 </tbody>
                             </table>
                         </div>
