--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -143,7 +143,9 @@
                             </div>
                             <div class="row services-statistics landing-statistics">
                                 {% for row in table %}
-                                    <div class="col-xl-6">
+                                    {% if row.value == True %}
+                                        {% else %}
+                                        <div class="col-xl-6">
                                         <div class="card">
                                             <div class="card-header">
                                                 <img class="avatar" src="{{ row.icon.url }}">
@@ -226,6 +228,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    {% endif %}
                                 {% endfor %}
                             </div>
                         </div>
