--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -50,13 +50,13 @@
                                     <h3 class="text-start fw-bold p-0 m-0">Обменное бюро</h3>
                                     <img src="/static/20221212_234123.png" class="p-0 m-0" width="90" alt="">
                                 </div>
-                                <a href="#"
+                                <a href="tel://0990099080"
                                    target="_blank" class="btn ripple btn-min w-lg mb-3 me-2 btn-primary"><i
-                                        class="icon icon-phone me-2"></i> (772) 121111
+                                        class="icon icon-phone me-2"></i> 0990 09 90 80
                                 </a>
-                                <a href="#"
+                                <a href="tel://0550555208"
                                    class="btn ripple btn-min w-lg btn-outline-primary mb-3 me-2" target="_blank"><i
-                                        class="fe fe-smartphone me-2"></i>(555) 1555223
+                                        class="fe fe-smartphone me-2"></i>0550555208
                                 </a>
                             </div>
                         </div>
