--- a/templates/index.html
+++ b/templates/index.html
@@ -148,10 +148,10 @@
           <thead>
             <tr>
               <td colspan="2"></td>
-              <td colspan="2">USD</td>
-              <td colspan="2">EUR</td>
-              <td colspan="2">RUB</td>
-              <td colspan="2">KZT</td>
+              <td colspan="2"><img height="30px" width="30px" src="/static/assets/images/flags/us.svg"/><br>USD</td>
+              <td colspan="2"><img height="30px" width="30px" src="/static/assets/images/flags/eu.svg"/><br>EUR</td>
+              <td colspan="2"><img height="30px" width="30px" src="/static/assets/images/flags/ru.svg"/><br>RUB</td>
+              <td colspan="2"><img height="30px" width="30px" src="/static/assets/images/flags/kz.svg"/><br>KZT</td>
               <td colspan=""></td>
             </tr>
             <tr>
